tests/security/transformTaintChannelStorePattern/output.txt
ERROR: TaintedData - input.hack:16:39 - Data from a server request found its way to unauthorized fetch key for data using path $_POST --array-fetch--> arrayvalue-fetch (input.hack:14:36) ----> $encoded_channel_id (input.hack:14:5) ----> decode_channel#1 (input.hack:15:34) ----> call to decode_channel (input.hack:3:4) ----> $channel_id (input.hack:15:5) ----> ChannelStore::fetchById#1 (input.hack:16:39)
